ComplexTypesTest was fixed.